--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -104,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQ0AAAD8CAYAAABtq/EAAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADQlJREFUeJzt3X+sZPVZx/H3RxZY2SIsUimwRMAQEmy0kA3S2mDjVgpI\n2Jr0jyVWoTQhjaJgapqtJLbxL2u1/mzarIBSJdBIwZIGhC1tY0xkLWyXn0vLghTYLj9qG0CbCGsf\n/5izzeVy7937nTlz99y771cymTNzvjPn4Zw7nz3nzHCeVBWStFg/dqALkLS8GBqSmhgakpoYGpKa\nGBqSmhgakpoYGpKaGBqSmhgakpqsWsqFHZbDazVrlnKRkhbpFb7/3ap68/7GLWlorGYNv5ANS7lI\nSYv05brl24sZ5+GJpCaGhqQmE4VGkvOTfDPJriSb+ypK0nCNHRpJDgE+DVwAnAFckuSMvgqTNEyT\n7GmcDeyqqier6lXgZmBjP2VJGqpJQuNE4JkZj5/tnpO0gk39K9ckVwBXAKzmiGkvTtKUTbKnsRs4\nacbjdd1zr1NVW6pqfVWtP5TDJ1icpCGYJDS+DpyW5JQkhwGbgNv7KUvSUI19eFJVe5NcCdwFHAJc\nX1WP9FaZpEGa6JxGVd0B3NFTLZKWAX8RKqmJoSGpiaEhqYmhIamJoSGpiaEhqYmhIamJoSGpiaEh\nqYmhIamJoSGpiaEhqYmhIamJoSGpiaEhqYmhIamJoSGpiaEhqYmhIamJoSGpySS9XE9K8tUkjyZ5\nJMlVfRYmaZgmuRr5XuDDVbU9yZHA/Um2VtWjPdUmaYDG3tOoqj1Vtb2bfgXYib1cpRWvl3MaSU4G\nzgS29fF+koZr4gbQSd4EfAG4uqpenmO+DaClFWSiPY0khzIKjBur6ta5xtgAWlpZJvn2JMB1wM6q\n+lR/JUkaskn2NH4R+A3gl5Ps6G4X9lSXpIGapGv8vwHpsRZJy4C/CJXUxNCQ1MTQkNTE0JDUxNCQ\n1MTQkNTE0JDUxNCQ1MTQkNTE0JDUxNCQ1MTQkNTE0JDUxNCQ1MTQkNTE0JDUxNCQ1MTQkNTE0JDU\nxNCQ1GTi0EhySJJvJPlSHwVJGrY+9jSuYtTHVdJBYNIOa+uAXwWu7accSUM36Z7GXwAfAX7YQy2S\nloFJ2jJeBLxQVffvZ9wVSe5Lct9r/O+4i5M0EJO2Zbw4yVPAzYzaM/7j7EE2gJZWlrFDo6o+WlXr\nqupkYBPwlap6f2+VSRokf6chqcnYDaBnqqqvAV/r470kDZt7GpKaGBqSmhgakpoYGpKaGBqSmhga\nkpoYGpKaGBqSmhgakpoYGpKaGBqSmhgakpoYGpKaGBqSmhgakpoYGpKaGBqSmhgakpoYGpKaGBqS\nmkzalvHoJLckeSzJziRv76swScM06dXI/xL4l6p6X5LDgCN6qEnSgI0dGkmOAs4FLgOoqleBV/sp\nS9JQTXJ4cgrwIvB3Sb6R5Noka3qqS9JATRIaq4CzgM9U1ZnA/wCbZw+yAbS0skwSGs8Cz1bVtu7x\nLYxC5HVsAC2tLJM0gH4OeCbJ6d1TG4BHe6lK0mBN+u3J7wA3dt+cPAl8YPKSJA3ZRKFRVTuA9T3V\nImkZ8BehkpoYGpKaGBqSmhgakpoYGpKaGBqSmhgakpoYGpKaGBqSmhgakpoYGpKaGBqSmhgakpoY\nGpKaGBqSmhgakpoYGpKaGBqSmhgakpoYGpKaTNoA+veSPJLk4SQ3JVndV2GShmns0EhyIvC7wPqq\neitwCLCpr8IkDdOkhyergB9PsopRx/jvTF6SpCGbpMPabuBPgaeBPcBLVXV3X4VJGqZJDk/WAhsZ\ndY8/AViT5P1zjLMBtLSCTHJ48m7gP6vqxap6DbgVeMfsQTaAllaWSULjaeCcJEckCaMG0Dv7KUvS\nUE1yTmMbcAuwHXioe68tPdUlaaAmbQD9MeBjPdUiaRnwF6GSmhgakpoYGpKaGBqSmhgakpoYGpKa\nGBqSmhgakpoYGpKaGBqSmhgakpoYGpKaGBqSmhgakpoYGpKaGBqSmkx0EZ6V7K7v7DjQJTR5zwlv\nO9Al6CDhnoakJoaGpCaGhqQm+w2NJNcneSHJwzOeOybJ1iSPd/drp1umpKFYzJ7G3wPnz3puM3BP\nVZ0G3NM9lnQQ2G9oVNW/At+b9fRG4IZu+gbgvT3XJWmgxj2ncVxV7emmnwOO66keSQM38YnQqiqg\n5ptvA2hpZRk3NJ5PcjxAd//CfANtAC2tLOOGxu3Apd30pcAX+ylH0tAt5ivXm4B/B05P8mySDwJ/\nDPxKkseBd3ePJR0E9vv/nlTVJfPM2tBzLZKWAX8RKqmJoSGpiaEhqYmhIamJoSGpiaEhqYmhIamJ\noSGpiaEhqYmhIamJoSGpiaEhqYmhIamJoSGpiaEhqYmhIamJoSGpiaEhqYmhIamJoSGpybgNoD+Z\n5LEkDya5LcnR0y1T0lCM2wB6K/DWqvo54FvAR3uuS9JAjdUAuqrurqq93cN7gXVTqE3SAPVxTuNy\n4M4e3kfSMrDfZkkLSXINsBe4cYExVwBXAKzmiEkWJ2kAxg6NJJcBFwEbus7xc6qqLcAWgJ/IMfOO\nk7Q8jBUaSc4HPgL8UlX9oN+SJA3ZuA2g/wY4EtiaZEeSz065TkkDMW4D6OumUIukZcBfhEpqYmhI\namJoSGpiaEhqYmhIamJoSGpiaEhqYmhIamJoSGpiaEhqYmhIamJoSGpiaEhqYmhIamJoSGpiaEhq\nYmhIamJoSGpiaEhqYmhIajJWA+gZ8z6cpJIcO53yJA3NuA2gSXIScB7wdM81SRqwsRpAd/6cUcMk\nu6ZJB5Gxzmkk2QjsrqoHeq5H0sA1t2VMcgTwB4wOTRYz3gbQ0goyzp7GzwCnAA8keQpYB2xP8pa5\nBlfVlqpaX1XrD+Xw8SuVNAjNexpV9RDwU/sed8Gxvqq+22NdkgZq3AbQkg5S4zaAnjn/5N6qkTR4\n/iJUUhNDQ1KTVC3db7OSvAh8e57ZxwJDOpk6tHpgeDVZz8KGVg8sXNNPV9Wb9/cGSxoaC0lyX1Wt\nP9B17DO0emB4NVnPwoZWD/RTk4cnkpoYGpKaDCk0thzoAmYZWj0wvJqsZ2FDqwd6qGkw5zQkLQ9D\n2tOQtAwseWgkOT/JN5PsSrJ5jvmHJ/l8N39bkpOnWMtJSb6a5NEkjyS5ao4x70ryUpId3e0Pp1XP\njGU+leShbnn3zTE/Sf6qW0cPJjlrirWcPuO/fUeSl5NcPWvMVNfRXFePS3JMkq1JHu/u187z2ku7\nMY8nuXSK9XwyyWPd9rgtydHzvHbBbdtzTR9PsnvGdrlwntcu+Jl8g6pashtwCPAEcCpwGPAAcMas\nMb8FfLab3gR8for1HA+c1U0fCXxrjnreBXxpidfTU8CxC8y/ELgTCHAOsG0Jt99zjL7PX7J1BJwL\nnAU8POO5PwE2d9ObgU/M8bpjgCe7+7Xd9Nop1XMesKqb/sRc9Sxm2/Zc08eB31/ENl3wMzn7ttR7\nGmcDu6rqyap6FbgZ2DhrzEbghm76FmBDkkyjmKraU1Xbu+lXgJ3AidNYVs82Ap+rkXuBo5McvwTL\n3QA8UVXz/UBvKmruq8fN/Du5AXjvHC99D7C1qr5XVd8HtjLHpSv7qKeq7q6qvd3DexldMmLJzLOO\nFmMxn8nXWerQOBF4ZsbjZ3njh/RHY7qN8BLwk9MurDsMOhPYNsfstyd5IMmdSX522rUwuoTi3Unu\n7y5iNNti1uM0bAJummfeUq+j46pqTzf9HHDcHGMO1Hq6nNGe4Fz2t237dmV3yHT9PIdwzevIE6FA\nkjcBXwCurqqXZ83ezmh3/OeBvwb+eQlKemdVnQVcAPx2knOXYJkLSnIYcDHwT3PMPhDr6EdqtJ89\niK8Bk1wD7AVunGfIUm7bzzC6aNbbgD3An/XxpksdGruBk2Y8Xtc9N+eYJKuAo4D/mlZBSQ5lFBg3\nVtWts+dX1ctV9d/d9B3AodNu2VBVu7v7F4DbGO1CzrSY9di3C4DtVfX87BkHYh0Bz+87JOvuX5hj\nzJKupySXARcBv94F2RssYtv2pqqer6r/q6ofAn87z7Ka19FSh8bXgdOSnNL9y7UJuH3WmNuBfWe5\n3wd8Zb4NMKnuXMl1wM6q+tQ8Y96y75xKkrMZrbNphtiaJEfum2Z0gm12z5nbgd/svkU5B3hpxq76\ntFzCPIcmS72OOjP/Ti4FvjjHmLuA85Ks7XbNz+ue612S8xldnf/iqvrBPGMWs237rGnmea5fm2dZ\ni/lMvl7fZ3EXcZb3QkbfUjwBXNM990eMVjbAaka7wLuA/wBOnWIt72S0W/sgsKO7XQh8CPhQN+ZK\n4BFGZ5XvBd4x5fVzaresB7rl7ltHM2sK8OluHT7E6HKL06xpDaMQOGrGc0u2jhiF1R7gNUbH3B9k\ndJ7rHuBx4MvAMd3Y9cC1M157efe3tAv4wBTr2cXo3MC+v6N93wCeANyx0LadYk3/0P19PMgoCI6f\nXVP3+A2fyYVu/iJUUhNPhEpqYmhIamJoSGpiaEhqYmhIamJoSGpiaEhqYmhIavL/1230Six4buIA\nAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f4d774de2e8>"
+       "<matplotlib.figure.Figure at 0x7f4d776075c0>"
       ]
      },
      "metadata": {},
@@ -134,6 +134,35 @@
     "plt.imshow(img)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
